--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
           <div class="flex space-x-2 items-center pb-4">
             <!-- Toggler -->
             <div
-              class="bg-gray-500 w-12 h-6 cursor-pointer rounded-3xl flex items-center transition-all toggler-menu"
+              class="bg-green-700 w-12 h-6 cursor-pointer rounded-3xl flex items-center transition-all toggler-menu"
             >
               <div
-                class="bg-white w-6 h-6 transform scale-75 rounded-3xl transition-transform flex items-center justify-center toggle-menu-ball"
+                class="bg-white w-6 h-6 transform scale-75 rounded-3xl transition-transform flex items-center justify-center translate-x-6 toggle-menu-ball"
               ></div>
             </div>
             <!-- End Of Toggler -->
@@ -6123,7 +6123,7 @@
     <!-- Analytics Modal -->
     <!-- Sidebar -->
     <div
-      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 md:-translate-x-24 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar"
+      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
     >
       <div
         class="flex flex-col items-center group-hover:md:items-end group-hover:md:pr-2 sidebar-wrap"
