fixed problem where analytics bar still showing if there are no saved quotes

--- a/index.html
+++ b/index.html
@@ -6102,16 +6102,23 @@
               <!-- End Of Booked Job -->
             </div>
             <!-- End Of Legend -->
+            <!-- No Data To Display Message -->
+            <h3
+              class="text-red-500 font-bold bg-black text-center text-xl mt-3 px-2 py-1 hidden no-data-message"
+            >
+              No Data To Display!
+            </h3>
+            <!-- End Of No Data To Display Message -->
             <!-- Status Data Bar -->
             <div class="status-data my-4 flex overflow-hidden shadow-lg">
               <div
-                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white opacity-0 analytics-data gave-quote-data"
+                class="flex justify-center items-center h-7 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white opacity-0 analytics-data gave-quote-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data give-callback-data"
+                class="flex justify-center items-center h-7 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data give-callback-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold opacity-0 analytics-data all-booked-jobs-data"
+                class="flex justify-center items-center h-7 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold opacity-0 analytics-data all-booked-jobs-data"
               ></div>
             </div>
             <!-- End Of Status Data Bar -->
