names now have status colors

--- a/index.html
+++ b/index.html
@@ -5411,7 +5411,7 @@
                 </div>
                 <select
                   name="saved-quotes"
-                  class="bg-green-700 text-white tracking-wider select-colors text-sm sm:text-lg"
+                  class="bg-green-700 text-white font-bold tracking-wider select-colors text-sm sm:text-lg"
                   id="saved-quotes"
                 >
                   <option value="all">All</option>
@@ -5441,7 +5441,7 @@
                 <select
                   name="filter-date"
                   id="filter-date"
-                  class="bg-green-700 text-white tracking-wider text-sm sm:text-lg"
+                  class="bg-green-700 text-white font-bold tracking-wider text-sm sm:text-lg"
                 >
                   <option value="all">All</option>
                   <option value="today">Today</option>
