--- a/index.html
+++ b/index.html
@@ -5152,6 +5152,7 @@
                   <option value="gave quote">Gave Quote</option>
                   <option value="give callback">Give Callback</option>
                   <option value="booked job">Booked Job</option>
+                  <option value="dead quotes">Dead Quote</option>
                 </select>
               </div>
             </div>
@@ -5387,37 +5388,41 @@
                     >Filter Status</label
                   >
                   <div>
-                    <img
-                      src="img/contact-book.png"
-                      class="h-6 w-6 md:h-7 md:w-7 all-contacts-icon"
-                      alt="All Contacts Icon"
-                    />
-                    <img
-                      src="img/quotes.png"
-                      class="h-6 w-6 hidden md:h-7 md:w-7 gave-quote-icon"
-                      alt="Gave Quote Icon"
-                    />
-                    <img
-                      src="img/phone-call-red.png"
-                      class="h-6 w-6 hidden md:h-7 md:w-7 give-callback-icon"
-                      alt="Give Callback Icon"
-                    />
-                    <img
-                      src="img/manual-book.png"
-                      class="h-6 w-6 hidden md:h-7 md:w-7 booked-job-icon"
-                      alt="Booked Job Icon"
-                    />
+                    <span class="all-contacts-icon"
+                      ><i
+                        class="fa-solid fa-address-book fa-xl text-[#15803d]"
+                      ></i
+                    ></span>
+                    <span class="gave-quote-icon hidden">
+                      <i
+                        class="fa-solid fa-comments-dollar fa-xl text-[#2563eb]"
+                      ></i>
+                    </span>
+                    <span class="give-callback-icon hidden"
+                      ><i
+                        class="fa-solid fa-square-phone fa-xl text-[#f97316]"
+                      ></i
+                    ></span>
+                    <span class="booked-job-icon hidden">
+                      <i class="fa-solid fa-book-open fa-xl text-[#10B981]"></i>
+                    </span>
+                    <span class="dead-quote-icon hidden">
+                      <i
+                        class="fa-solid fa-file-circle-xmark fa-xl text-[#DC2626]"
+                      ></i>
+                    </span>
                   </div>
                 </div>
                 <select
                   name="saved-quotes"
-                  class="bg-green-700 text-white font-bold tracking-wider select-colors text-sm sm:text-lg"
+                  class="bg-green-700 text-white font-bold tracking-wider text-sm sm:text-lg"
                   id="saved-quotes"
                 >
                   <option value="all">All</option>
                   <option value="gave quote">Gave Quote</option>
                   <option value="give callback">Give Callback</option>
                   <option value="booked job">Booked Job</option>
+                  <option value="dead quotes">Dead Quotes</option>
                 </select>
               </div>
               <div class="flex flex-col text-center">
@@ -5694,6 +5699,7 @@
                   <option value="gave quote">Gave Quote</option>
                   <option value="give callback">Give Callback</option>
                   <option value="booked job">Booked Job</option>
+                  <option value="dead quotes">Dead Quote</option>
                 </select>
               </div>
               <!-- End Of Status -->
@@ -6078,7 +6084,7 @@
               <h4 class="text-lg font-bold tracking-wide">Legend:</h4>
               <!-- Gave Quote -->
               <div class="flex items-center gap-2">
-                <span class="text-lg">Gave Quote</span>
+                <span class="text-lg">Gave Quote:</span>
                 <div
                   class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-blue-500 rounded-full border-2 border-white gave-quote-circle"
                 ></div>
@@ -6086,20 +6092,28 @@
               <!-- End Of Gave Quote -->
               <!-- Give Callback -->
               <div class="flex items-center gap-2">
-                <span class="text-lg">Give Callback</span>
+                <span class="text-lg">Give Callback:</span>
                 <div
-                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-red-500 rounded-full border-2 border-white give-callback-circle"
+                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-orange-500 rounded-full border-2 border-white give-callback-circle"
                 ></div>
               </div>
               <!-- End Of Give Callback -->
               <!-- Booked Job -->
               <div class="flex items-center gap-2">
-                <span class="text-lg">Booked Job</span>
+                <span class="text-lg">Booked Job:</span>
                 <div
                   class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-emerald-500 rounded-full border-2 border-white booked-job-circle"
                 ></div>
               </div>
               <!-- End Of Booked Job -->
+              <!-- Dead Quotes -->
+              <div class="flex items-center gap-2">
+                <span class="text-lg">Dead Quotes:</span>
+                <div
+                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-red-500 rounded-full border-2 border-white dead-quotes-circle"
+                ></div>
+              </div>
+              <!-- End Of Dead Quotes -->
             </div>
             <!-- End Of Legend -->
             <!-- No Data To Display Message -->
@@ -6115,10 +6129,13 @@
                 class="flex justify-center items-center h-7 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white opacity-0 analytics-data gave-quote-data"
               ></div>
               <div
-                class="flex justify-center items-center h-7 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data give-callback-data"
+                class="flex justify-center items-center h-7 bg-orange-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data give-callback-data"
               ></div>
               <div
-                class="flex justify-center items-center h-7 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold opacity-0 analytics-data all-booked-jobs-data"
+                class="flex justify-center items-center h-7 bg-emerald-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data all-booked-jobs-data"
+              ></div>
+              <div
+                class="flex justify-center items-center h-7 bg-red-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold opacity-0 analytics-data all-dead-quotes-data"
               ></div>
             </div>
             <!-- End Of Status Data Bar -->
