--- a/index.html
+++ b/index.html
@@ -5689,7 +5689,7 @@
               </h3>
               <h3 class="text-center font-semibold tracking-widest">Status</h3>
               <div
-                class="bg-slate-200 py-2 text-center mx-auto mb-2 w-full px-2"
+                class="bg-slate-200 py-2 text-center mx-auto mb-2 w-full px-2 status-box"
               >
                 <select
                   name="status-quote"
