added change quote theme when changing status

--- a/index.html
+++ b/index.html
@@ -5497,6 +5497,9 @@
             </button>
           </div>
           <!-- End Of Quote Heading -->
+          <!-- Quote Icon -->
+          <div class="text-center mb-3 main-quote-icon"></div>
+          <!-- End Of Quote Icon -->
           <!-- Quote Info -->
           <div class="quote-info sm:grid grid-cols-2 gap-6">
             <!-- First Item -->
@@ -5519,7 +5522,7 @@
               <!-- End Of Tax Rate -->
               <!-- Clean Type -->
               <h3
-                class="text-center text-white capitalize text-2xl tracking-widest font-bold bg-emerald-600 clean-type"
+                class="text-center text-white capitalize text-2xl tracking-widest font-bold bg-emerald-600 clean-type status-bg"
               ></h3>
               <!-- Square Footage -->
               <div
@@ -5590,7 +5593,7 @@
               class="single-input-form row-span-2 sm:border-4 border-black sm:p-4 dark:border-white"
             >
               <h3
-                class="text-center text-4xl text-white font-bold p-1 bg-emerald-700"
+                class="text-center text-4xl text-white font-bold p-1 bg-emerald-700 status-bg"
               >
                 Client Info
               </h3>
@@ -5683,7 +5686,7 @@
               class="sm:-mt-25 sm:border-4 border-black sm:p-4 dark:border-white"
             >
               <h3
-                class="text-center text-white text-2xl font-bold p-1 bg-emerald-700"
+                class="text-center text-white text-2xl font-bold p-1 bg-emerald-700 status-bg"
               >
                 Status & Other Quotes
               </h3>
