--- a/index.html
+++ b/index.html
@@ -5133,17 +5133,27 @@
         class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[98vh] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
         <div class="px-4 pt-2">
-          <div class="flex items-center justify-between border-b-2 mb-2 pb-2">
+          <div class="flex items-start justify-between border-b-2 mb-2 pb-2">
             <div class="md:flex">
-              <small
-                class="tracking-widest font-semibold text-xl quote-heading md:mr-4"
-                >Save Quote</small
+              <h3
+                class="md:max-w-[100px] tracking-widest font-semibold font-serif text-3xl mb-1 md:mr-6 quote-heading"
               >
+                Save Quote
+              </h3>
               <!-- Set Status -->
               <div class="flex flex-col">
-                <label for="status" class="tracking-wider font-semibold"
-                  >Set Status</label
-                >
+                <div class="flex items-center gap-2 mb-1">
+                  <label
+                    for="status"
+                    class="tracking-wider font-semibold text-xl"
+                    >Set Status</label
+                  >
+                  <div class="saved-quotes-icon">
+                    <i
+                      class="fa-solid fa-comments-dollar fa-2x text-[#2563eb]"
+                    ></i>
+                  </div>
+                </div>
                 <select
                   name="status"
                   class="cursor-pointer px-1 text-white bg-blue-600 border-2 others-select-colors"
@@ -5189,7 +5199,7 @@
             <div>
               <label
                 for="name"
-                class="text-emerald-600 tracking-widest font-semibold mr-4"
+                class="text-blue-600 tracking-widest font-semibold mr-4 save-quote-label"
                 >Name:</label
               >
               <small class="text-red-500 font-bold">** Required **</small>
@@ -5199,7 +5209,7 @@
                 id="name"
                 placeholder="Enter Name"
                 spellcheck="false"
-                class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full name"
+                class="save-quote-input outline-blue-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full name"
               />
             </div>
             <!-- End Of Name Input -->
@@ -5207,7 +5217,7 @@
             <div>
               <label
                 for="email"
-                class="text-emerald-600 tracking-widest font-semibold mr-5"
+                class="text-blue-600 tracking-widest font-semibold mr-5 save-quote-label"
                 >Email:</label
               >
               <input
@@ -5215,7 +5225,7 @@
                 name="email"
                 id="email"
                 placeholder="Enter Email"
-                class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full email"
+                class="save-quote-input outline-blue-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full email"
               />
             </div>
             <!-- End Of Email Input -->
@@ -5223,7 +5233,7 @@
             <div>
               <label
                 for="number"
-                class="text-emerald-600 tracking-widest font-semibold"
+                class="text-blue-600 tracking-widest font-semibold save-quote-label"
                 >Number:</label
               >
               <input
@@ -5231,7 +5241,7 @@
                 name="number"
                 id="number"
                 placeholder="Enter Number"
-                class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full phone-number"
+                class="save-quote-input outline-blue-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full phone-number"
               />
             </div>
             <!-- End Of Phone Number Input -->
@@ -5239,7 +5249,7 @@
             <div>
               <label
                 for="address"
-                class="text-emerald-600 tracking-widest font-semibold"
+                class="text-blue-600 tracking-widest font-semibold save-quote-label"
                 >Address:</label
               >
               <textarea
@@ -5248,7 +5258,7 @@
                 cols="35"
                 rows="2"
                 placeholder="Enter Address"
-                class="outline-emerald-600 border-2 px-2 placeholder:tracking-wide text-black w-full address"
+                class="save-quote-input outline-blue-600 border-2 px-2 placeholder:tracking-wide text-black w-full address"
               ></textarea>
             </div>
             <!-- End Of Address Input -->
@@ -5256,7 +5266,7 @@
             <div>
               <label
                 for="city"
-                class="text-emerald-600 tracking-widest font-semibold block"
+                class="text-blue-600 tracking-widest font-semibold block save-quote-label"
                 >City:</label
               >
               <input
@@ -5264,7 +5274,7 @@
                 name="name"
                 id="city"
                 placeholder="Enter City"
-                class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full city"
+                class="save-quote-input outline-blue-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full city"
               />
             </div>
             <!-- End Of City Input -->
@@ -5272,7 +5282,7 @@
             <div>
               <label
                 for="zipcode"
-                class="text-emerald-600 tracking-widest font-semibold block"
+                class="text-blue-600 tracking-widest font-semibold block save-quote-label"
                 >Zip Code:</label
               >
               <input
@@ -5280,7 +5290,7 @@
                 name="zipcode"
                 id="number"
                 placeholder="Enter Zip Code"
-                class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full zip-code"
+                class="save-quote-input outline-blue-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full zip-code"
               />
             </div>
             <!-- End Of Zip Code Input -->
@@ -5288,7 +5298,7 @@
             <div>
               <label
                 for="special-note"
-                class="text-emerald-600 tracking-widest font-semibold"
+                class="text-blue-600 tracking-widest font-semibold save-quote-label"
                 >Special Notes:</label
               >
               <textarea
@@ -5297,7 +5307,7 @@
                 cols="25"
                 rows="2"
                 placeholder="Enter Special Notes Here"
-                class="outline-emerald-600 border-2 px-2 placeholder:tracking-wide text-black address w-full special-notes"
+                class="save-quote-input outline-blue-600 border-2 px-2 placeholder:tracking-wide text-black address w-full special-notes"
               ></textarea>
             </div>
             <!-- End Of Special Note Textarea -->
