--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       >
         <div class="px-4 pt-2">
           <div
-            class="flex items-center justify-between gap-6 border-b-2 mb-4 pb-4"
+            class="flex items-start justify-between gap-6 border-b-2 mb-4 pb-4"
           >
             <span class="tracking-widest font-semibold text-2xl font-serif"
               >App Settings</span
@@ -5344,7 +5344,7 @@
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
           <div
-            class="flex items-center justify-between gap-6 border-b-2 mb-4 pb-4"
+            class="flex items-start justify-between gap-6 border-b-2 mb-4 pb-4"
           >
             <h3 class="tracking-widest font-semibold text-2xl font-serif">
               Saved Quotes
@@ -5352,10 +5352,10 @@
             <div class="flex items-center gap-2 sm:gap-4">
               <button class="sort-btn">
                 <span class="sorted-icon">
-                  <i class="fa-solid fa-arrow-down-a-z fa-xl"></i>
+                  <i class="fa-solid fa-arrow-down-a-z fa-2xl"></i>
                 </span>
                 <span class="not-sorted-icon hidden">
-                  <i class="fa-solid fa-arrow-up-z-a fa-xl"></i>
+                  <i class="fa-solid fa-arrow-up-z-a fa-2xl"></i>
                 </span>
               </button>
               <button class="close-modal">
@@ -6050,7 +6050,7 @@
         <div class="px-2 sm:px-4 pt-2">
           <!-- Analytics Heading -->
           <div
-            class="flex justify-between items-center gap-6 border-b-2 mb-4 pb-4"
+            class="flex justify-between items-start gap-6 border-b-2 mb-4 pb-4"
           >
             <h3 class="tracking-widest font-semibold text-2xl font-serif">
               Analytics Data
