fixed issue with small screen not fittings saved quotes correctly

--- a/index.html
+++ b/index.html
@@ -5339,7 +5339,7 @@
         <span class="bg-red-600 inline-block px-3 small-text"></span>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm max-h-[80vh] lg:max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
