changed title, added meta description, and removed the rest of the unnessary small tags. All this was done in the html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Take your maid service to the next level by giving custom quotes & keeping track of those quotes. Try us out today!"
+    />
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Google Fonts -->
@@ -25,7 +29,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- End Of Favicon -->
-    <title>Maid Quote Calculator</title>
+    <title>
+      Maid Quote Calculator - Built for maid services to give & track quotes
+    </title>
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
     <div class="container">
@@ -6374,15 +6380,15 @@
                 class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
               ></i>
               <!-- Hours Changed Icon -->
-              <small
-                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
-                >Hours Changed</small
+              <span
+                class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</span
               >
               <!-- End Of Hours Changed Icon -->
               <!-- Hours Num Icon -->
-              <small
-                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
-              ></small>
+              <span
+                class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
+              ></span>
               <!-- End Of Hours Num Icon  -->
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
@@ -6504,13 +6510,13 @@
               <i
                 class="fa-solid fa-spray-can-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
               ></i>
-              <small
-                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
-                >Hours Changed</small
+              <span
+                class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</span
               >
-              <small
-                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
-              ></small>
+              <span
+                class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
+              ></span>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
                 data-id="general-clean"
@@ -6607,13 +6613,13 @@
               <i
                 class="fa-solid fa-calendar-week p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
               ></i>
-              <small
-                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
-                >Hours Changed</small
+              <span
+                class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</span
               >
-              <small
-                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
-              ></small>
+              <span
+                class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
+              ></span>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
                 data-id="weekly-price"
@@ -6712,13 +6718,13 @@
               <i
                 class="fa-solid fa-calendar-day p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
               ></i>
-              <small
-                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
-                >Hours Changed</small
+              <span
+                class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</span
               >
-              <small
-                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
-              ></small>
+              <span
+                class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
+              ></span>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
                 data-id="bi-weekly-price"
@@ -6817,13 +6823,13 @@
               <i
                 class="fa-solid fa-calendar-days p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
               ></i>
-              <small
-                class="bg-red-400 p-2 rounded-full text-white font-semibold tracking-wider deep-changed hidden"
-                >Hours Changed</small
+              <span
+                class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
+                >Hours Changed</span
               >
-              <small
-                class="p-2 rounded-full text-white font-semibold tracking-wider num-icon hidden"
-              ></small>
+              <span
+                class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
+              ></span>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
                 data-id="monthly-price"
