made title all words cappitalized

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <!-- End Of Favicon -->
     <title>
-      Maid Quote Calculator - Built for maid services to give & track quotes
+      Maid Quote Calculator - Built For Maid Services to Give & Track Quotes
     </title>
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
