added google tracking code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CTK57E9S0T"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-CTK57E9S0T');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,7 +45,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <!-- End Of Favicon -->
     <title>
-      Maid Quote Calculator - Built For Maid Services to Give & Track Quotes
+      Maid Quote Calculator - Built for Maid Services to Give & Track Quotes
     </title>
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
