changed size of article titles, also changed meta info

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Take your maid service to the next level by giving custom quotes & keeping track of those quotes. Try us out today!"
+      content="Take your maid service to the next level by giving & keeping track of custom quotes."
     />
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -45,7 +45,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <!-- End Of Favicon -->
     <title>
-      Maid Quote Calculator - Built for Maid Services to Give & Track Quotes
+      Maid Quote Calculator - Helping Maid Services give & track custom quotes
     </title>
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
@@ -199,11 +199,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   1000 - 1500 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-1 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between select-container"
@@ -547,11 +547,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   1600 - 2000 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -911,11 +911,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   2100 - 2200 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -1283,11 +1283,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   2300 - 2500 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -1663,11 +1663,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   2600 - 2800 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -2063,11 +2063,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   2900 - 3100 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -2483,11 +2483,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   3200 - 3400 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -2899,11 +2899,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   3500 - 3700 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -3327,11 +3327,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   3800 - 4000 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -3759,11 +3759,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   4100 - 4300 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -4211,11 +4211,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   4400 - 4600 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -4671,11 +4671,11 @@
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
-                <h2
+                <div
                   class="text-center text-bold text-sm text-white mb-2 p-2 font-serif bg-emerald-600 xmd:text-xl xss:mb-4"
                 >
                   4800 - 5000 Square Feet
-                </h2>
+                </div>
                 <!-- Deep Hours Adjust -->
                 <div
                   class="border-b-2 border-t-2 py-2 space-x-2 space-y-2 flex flex-col justify-center items-center xmd:flex xmd:space-y-0 xmd:py-4 xmd:flex-row xmd:justify-between mt-0 select-container"
@@ -6406,7 +6406,7 @@
               ></span>
               <!-- End Of Hours Num Icon  -->
               <h3
-                class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                class="capitalize tracking-wider font-bold font-serif text-2xl my-4 cleaning-type"
                 data-id="deep-clean"
               >
                 deep clean
@@ -6533,7 +6533,7 @@
                 class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
               ></span>
               <h3
-                class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                class="capitalize tracking-wider font-bold font-serif text-2xl my-4 cleaning-type"
                 data-id="general-clean"
               >
                 general clean
@@ -6636,7 +6636,7 @@
                 class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
               ></span>
               <h3
-                class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                class="capitalize tracking-wider font-bold font-serif text-2xl my-4 cleaning-type"
                 data-id="weekly-price"
               >
                 weekly price
@@ -6741,7 +6741,7 @@
                 class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
               ></span>
               <h3
-                class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                class="capitalize tracking-wider font-bold font-serif text-2xl my-4 cleaning-type"
                 data-id="bi-weekly-price"
               >
                 bi-weekly price
@@ -6846,7 +6846,7 @@
                 class="p-2 rounded-full text-white text-xs font-semibold tracking-wider num-icon hidden"
               ></span>
               <h3
-                class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                class="capitalize tracking-wider font-bold font-serif text-2xl my-4 cleaning-type"
                 data-id="monthly-price"
               >
                 monthly price
