added user temp user message

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
         <h1 class="">Maid Quote Calculator</h1>
       </div>
       <!-- End Of Maid Quote Calculator Heading -->
+
+      <!-- User Message -->
+      <div class="user-message text-center text-red-500 p-3">
+        <p>
+          Please Notice I Have Created More Options For Square Footage
+          Selections. Unfortunately All User Settings Data Has Been Deleted.
+          Please Re-Adjust Your Hours In Settings
+        </p>
+      </div>
+      <!-- End Of User Message -->
+
       <div
         class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-save-form hidden opacity-0"
       >
