took out sidebar toggle, added inline styles to settings slider and added user message

--- a/index.html
+++ b/index.html
@@ -64,10 +64,20 @@
       <!-- End Of Maid Quote Calculator Heading -->
 
       <!-- User Message -->
-      <div class="user-message text-center text-red-500 p-3">
-        <p>
+      <div class="user-message p-3 max-w-md mx-auto">
+        <h3 class="text-2xl text-center text-black dark:text-white mb-2">
+          For All Users:
+        </h3>
+        <p class="text-center text-red-500">
+          Use the settings for permanent hourly adjustments. The change hours
+          button only changes the hours temporarily!!
+        </p>
+        <h3 class="text-2xl text-center text-black dark:text-white mb-2">
+          For Returning Users:
+        </h3>
+        <p class="text-center text-red-500">
           Please Notice I Have Created More Options For Square Footage
-          Selections. Unfortunately All User Settings Data Has Been Deleted.
+          Selections. Unfortunately All Old User Settings Data Has Been Deleted.
           Please Re-Adjust Your Hours In Settings
         </p>
       </div>
@@ -151,25 +161,6 @@
             <!-- End Of Toggler Name -->
           </div>
           <!-- End Of Toggler Wrapper (Dark Mode) -->
-          <!-- Toggler Wrapper (Menu Toggle) -->
-          <div class="flex space-x-2 items-center pb-4">
-            <!-- Toggler -->
-            <div
-              class="bg-green-700 w-12 h-6 cursor-pointer rounded-3xl flex items-center transition-all toggler-menu"
-            >
-              <div
-                class="bg-white w-6 h-6 transform scale-75 rounded-3xl transition-transform flex items-center justify-center translate-x-6 toggle-menu-ball"
-              ></div>
-            </div>
-            <!-- End Of Toggler -->
-            <!-- Toggler Name -->
-            <span
-              class="dark:text-white tracking-widest font-semibold text-xs xs:text-base sm:font-serif"
-              >Show Side Menu
-            </span>
-            <!-- End Of Toggler Name -->
-          </div>
-          <!-- End Of Toggler Wrapper (Menu Toggle) -->
           <!-- Toggler Wrapper (Tax Toggle) -->
           <div class="flex space-x-2 items-center border-b-2 pb-4">
             <!-- Toggler -->
@@ -911,6 +902,7 @@
             <!-- All Cleans Adjust Wrapper 1100-1300 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[200%] w-full transition-transform duration-300 px-6"
+              style="left: 200%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -1287,6 +1279,7 @@
             <!-- All Cleans Adjust Wrapper 1400-1600 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[300%] w-full transition-transform duration-300 px-6"
+              style="left: 300%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -1659,6 +1652,7 @@
             <!-- All Cleans Adjust Wrapper 1700-1900 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[400%] w-full transition-transform duration-300 px-6"
+              style="left: 400%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -2039,6 +2033,7 @@
             <!-- All Cleans Adjust Wrapper 2000-2200 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[500%] w-full transition-transform duration-300 px-6"
+              style="left: 500%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -2411,6 +2406,7 @@
             <!-- All Cleans Adjust Wrapper 2300-2500 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[600%] w-full transition-transform duration-300 px-6"
+              style="left: 600%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -2791,6 +2787,7 @@
             <!-- All Cleans Adjust Wrapper 2600-2800 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[700%] w-full transition-transform duration-300 px-6"
+              style="left: 700%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -3191,6 +3188,7 @@
             <!-- All Cleans Adjust Wrapper 2900-3100 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[800%] w-full transition-transform duration-300 px-6"
+              style="left: 800%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -3611,6 +3609,7 @@
             <!-- All Cleans Adjust Wrapper 3200-3400 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[900%] w-full transition-transform duration-300 px-6"
+              style="left: 900%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -4027,6 +4026,7 @@
             <!-- All Cleans Adjust Wrapper 3500-3700 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1000%] w-full transition-transform duration-300 px-6"
+              style="left: 1000%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -4455,6 +4455,7 @@
             <!-- All Cleans Adjust Wrapper 3800-4000 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1100%] w-full transition-transform duration-300 px-6"
+              style="left: 1100%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -4887,6 +4888,7 @@
             <!-- All Cleans Adjust Wrapper 4100-4300 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1200%] w-full transition-transform duration-300 px-6"
+              style="left: 1200%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -5339,6 +5341,7 @@
             <!-- All Cleans Adjust Wrapper 4400-4600 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1300%] w-full transition-transform duration-300 px-6"
+              style="left: 1300%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -5799,6 +5802,7 @@
             <!-- All Cleans Adjust Wrapper 4700-4900 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1400%] w-full transition-transform duration-300 px-6"
+              style="left: 1400%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -6275,6 +6279,7 @@
             <!-- All Cleans Adjust Wrapper 5000-5200 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1500%] w-full transition-transform duration-300 px-6"
+              style="left: 1500%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -6759,6 +6764,7 @@
             <!-- All Cleans Adjust Wrapper 5300-5500 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1600%] w-full transition-transform duration-300 px-6"
+              style="left: 1600%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -7251,6 +7257,7 @@
             <!-- All Cleans Adjust Wrapper 5600-5800 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1700%] w-full transition-transform duration-300 px-6"
+              style="left: 1700%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -7739,6 +7746,7 @@
             <!-- All Cleans Adjust Wrapper 5900-6100 -->
             <div
               class="clean-adjust-slide absolute top-0 left-[1800%] w-full transition-transform duration-300 px-6"
+              style="left: 1800%"
             >
               <!-- Deep Hours Adjust Wrapper -->
               <div>
@@ -9276,7 +9284,7 @@
     <!-- Analytics Modal -->
     <!-- Sidebar -->
     <div
-      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
+      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:bg-emerald-600 shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
     >
       <div
         class="flex flex-col items-center group-hover:md:items-end group-hover:md:pr-2 sidebar-wrap"
