--- a/index.html
+++ b/index.html
@@ -66,19 +66,30 @@
       <!-- User Message -->
       <div class="user-message p-3 max-w-md mx-auto">
         <h3 class="text-2xl text-center text-black dark:text-white mb-2">
-          For All Users:
+          Adjusting Hours:
         </h3>
         <p class="text-center text-red-500">
-          Use the settings for permanent hourly adjustments. The change hours
-          button only changes the hours temporarily!!
+          Use the settings in the
+          <span class="border-black border-b-2">SIDEMENU</span> for permanent
+          hourly adjustments. Once you make an hourly adjustment in settings,
+          the changes will be saved, even if you exit the site and come back.
+          The
+          <span class="border-black border-b-2">CHANGE HOUR BUTTONS</span> on
+          each cleaning type below only changes the hours TEMPORARILY!!
         </p>
         <h3 class="text-2xl text-center text-black dark:text-white mb-2">
-          For Returning Users:
+          Saving Quotes:
         </h3>
         <p class="text-center text-red-500">
-          Please Notice I Have Created More Options For Square Footage
-          Selections. Unfortunately All Old User Settings Data Has Been Deleted.
-          Please Re-Adjust Your Hours In Settings
+          Save a quote by clicking one of the
+          <span class="border-black border-b-2">SAVE QUOTE BUTTONS</span> on
+          each cleaning type below. When you save a quote, the only info you
+          need to fill out in the form is the
+          <span class="border-black border-b-2">NAME</span>, the rest can be
+          filled out later. All of your saved quotes can be viewed later in the
+          <span class="border-black border-b-2">SIDEMENU</span>. Click floppy
+          disk icon in the sidemenu to view all of your saved quotes. All saved
+          quotes will be saved even if you exit the site and come back!
         </p>
       </div>
       <!-- End Of User Message -->
@@ -8254,7 +8265,7 @@
       class="modal-quote bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm hidden items-center justify-center invisible"
     >
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[98vh] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[98vh] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-4 pt-2">
           <div class="flex items-start justify-between border-b-2 mb-2 pb-2">
@@ -9286,9 +9297,7 @@
     <div
       class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:bg-emerald-600 shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
     >
-      <div
-        class="flex flex-col items-center group-hover:md:items-end group-hover:md:pr-2 sidebar-wrap"
-      >
+      <div class="flex flex-col items-center sidebar-wrap">
         <div>
           <span
             class="font-semibold hidden md:group-hover:inline-block tracking-widest text-white menu-text"
